--- a/.github/workflows/nng.yml
+++ b/.github/workflows/nng.yml
@@ -204,18 +204,25 @@ jobs:
           cache: yarn
       - name: Install dependencies
         run: yarn install
+
       - name: Download macOS x64 artifact
         uses: actions/download-artifact@v3
         with:
           name: bindings-x86_64-apple-darwin
           path: artifacts
+
       - name: Download macOS arm64 artifact
         uses: actions/download-artifact@v3
         with:
           name: bindings-aarch64-apple-darwin
           path: artifacts
+
+      - name: List artifacts directory after extraction
+        run: ls -R ./artifacts # 确认解压后的文件
+
       - name: Combine binaries
         run: yarn universal
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
