--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
-
+zippy
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
@@ -121,9 +121,8 @@ dist
 .AppleDouble
 .LSOverride
 
-# Icon must end with two 
+# Icon must end with two
 Icon
-
 
 # Thumbnails
 ._*
