--- a/.github/workflows/nng.yml
+++ b/.github/workflows/nng.yml
@@ -7,18 +7,7 @@ permissions:
   contents: write
   id-token: write
 "on":
-  push:
-    branches:
-      - main
-    tags-ignore:
-      - "**"
-    paths-ignore:
-      - "**/*.md"
-      - LICENSE
-      - "**/*.gitignore"
-      - .editorconfig
-      - docs/**
-  pull_request: null
+  workflow_dispatch: # 允许手动触发
 jobs:
   build:
     strategy:
