--- a/zippy/package.json
+++ b/zippy/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@zippybee/nng",
-  "version": "1.1.16",
+  "version": "1.1.18",
   "description": "rustnng nodejs sdk",
   "main": "index.js",
+  "module": "index.mjs",
   "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
